re PR rtl-optimization/16180 (gcc crashes when optimization is turned on)

PR c/16180
	* jump.c (duplicate_loop_exit_test): If the location reached by
	the unconditional jump at the top of the loop is outside the loop,
	then do not treat it as the exit test.

	PR c/16180
	* gcc.dg/loop-5.c: New test.

From-SVN: r86458